--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "npm-run-all --parallel start playground"
   },
   "dependencies": {
+    "apollo-engine": "^0.9.1",
     "bcryptjs": "2.4.3",
+    "compression": "^1.7.2",
     "graphql-yoga": "1.4.3",
     "jsonwebtoken": "8.2.0",
     "prisma-binding": "1.5.16"
